# godot-kotlin-jvm-poc

./: Bridge.cpp  Bridge.h  CMakeLists.txt  Node2D.gd  Node2D.tscn  README.md  TestClass.gdns  library.cpp
gd/: Simple.gd  TestClass.gd
java/: TestClass.java  build.gradle.kts
java/src/main/kotlin/godot/test/: Simple.kt  TestClass.kt
jni/: JniHelper.cpp
jvm/: Jvm.cpp
registration/: ClassHandle.h
scripts/: Benchmarks.gd  Main.gd
src/: Bridge.cpp
src/jvm/: Jvm.cpp
src/registration/: ClassHandle.h
